[package]
authors = ["Andreas Reich <r_andreas2@web.de>"]
edition = "2018"
name = "hdr-cubemap-to-sh"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = {version = "0.23", default-features = false, features = ["hdr"]}
itertools = "0.9"
